--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,8 +16,10 @@ kotlinx-serialization-json = "1.6.0"
 ksp = "1.9.22-1.0.17"
 kps = "1.9.22"
 lifecycle-runtime-ktx = "2.7.0"
-compose-bom = "2023.10.01"
+compose-bom = "2024.01.00"
 compose-option = "1.5.8"
+material = "1.6.0"
+material3 = "1.2.0-rc01"
 navigation-ui-ktx = "2.7.6"
 retrofit = "2.9.0"
 retrofit2-kotlinx-serialization-converter = "1.0.0"
@@ -32,6 +34,7 @@ androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-j
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycle-runtime-ktx" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle-runtime-ktx" }
+androidx-material = { module = "androidx.compose.material:material", version.ref = "material" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-ui-ktx" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room-runtime" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room-runtime" }
@@ -44,7 +47,7 @@ androidx-compose = { group = "androidx.compose", name = "compose-bom", version.r
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-compose-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-compose-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-compose-test-ui = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-debug-tool = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-debug-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
