--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 activity-compose = "1.8.2"
-agp = "8.2.2"
+agp = "8.3.0"
 androidx-junit = "1.1.5"
 coil = "2.5.0"
 core-ktx = "1.12.0"
@@ -16,12 +16,12 @@ kotlinx-serialization-json = "1.6.0"
 ksp = "1.9.22-1.0.17"
 kps = "1.9.22"
 lifecycle-runtime-ktx = "2.7.0"
-compose-bom = "2024.01.00"
+compose-bom = "2024.02.01"
 compose-option = "1.5.8"
-material = "1.6.0"
-material3 = "1.2.0-rc01"
+material = "1.6.2"
+material3 = "1.2.0"
 media3-exoplayer = "1.2.1"
-navigation-ui-ktx = "2.7.6"
+navigation-ui-ktx = "2.7.7"
 retrofit = "2.9.0"
 retrofit2-kotlinx-serialization-converter = "1.0.0"
 room-runtime = "2.6.1"
