--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:name=".app.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
