--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 activity-compose = "1.8.2"
-agp = "8.3.1"
+agp = "8.3.2"
 androidx-junit = "1.1.5"
 coil = "2.5.0"
 core-ktx = "1.12.0"
@@ -16,11 +16,13 @@ kotlinx-serialization-json = "1.6.0"
 ksp = "1.9.22-1.0.17"
 kps = "1.9.22"
 lifecycle-runtime-ktx = "2.7.0"
-compose-bom = "2024.03.00"
+compose-bom = "2024.04.00"
 compose-option = "1.5.8"
-material = "1.6.4"
+material = "1.6.5"
 material3 = "1.2.1"
-media3-exoplayer = "1.3.0"
+media3-exoplayer = "1.3.1"
+mockito-core = "5.11.0"
+mockito-kotlin = "5.3.1"
 navigation-ui-ktx = "2.7.7"
 retrofit = "2.9.0"
 retrofit2-kotlinx-serialization-converter = "1.0.0"
@@ -60,6 +62,8 @@ koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin-core" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines-android" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito-core" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito-kotlin" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit2-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofit2-kotlinx-serialization-converter" }
 
