--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,10 @@
 [versions]
-activity-compose = "1.8.2"
+activity-compose = "1.9.0"
 agp = "8.3.2"
 androidx-junit = "1.1.5"
 coil = "2.5.0"
-core-ktx = "1.12.0"
+core-ktx = "1.13.0"
+datastore-preferences = "1.1.0"
 espresso-core = "3.5.1"
 junit = "4.13.2"
 koin-android = "3.4.3"
@@ -16,9 +17,9 @@ kotlinx-serialization-json = "1.6.0"
 ksp = "1.9.22-1.0.17"
 kps = "1.9.22"
 lifecycle-runtime-ktx = "2.7.0"
-compose-bom = "2024.04.00"
+compose-bom = "2024.04.01"
 compose-option = "1.5.8"
-material = "1.6.5"
+material = "1.6.6"
 material3 = "1.2.1"
 media3-exoplayer = "1.3.1"
 mockito-core = "5.11.0"
@@ -32,9 +33,11 @@ room-runtime = "2.6.1"
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore-preferences" }
 androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycle-runtime-ktx" }
+androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle-runtime-ktx" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle-runtime-ktx" }
 androidx-material = { module = "androidx.compose.material:material", version.ref = "material" }
