--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,13 @@
 [versions]
 activity-compose = "1.9.0"
-agp = "8.4.0"
+agp = "8.4.1"
 androidx-junit = "1.1.5"
 coil = "2.5.0"
 core-ktx = "1.13.1"
 core-splashscreen = "1.0.1"
 datastore-preferences = "1.1.1"
 espresso-core = "3.5.1"
+firebase-bom = "33.0.0"
 junit = "4.13.2"
 koin-android = "3.4.3"
 koin-androidx-compose = "3.4.3"
@@ -53,6 +54,8 @@ androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref =
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room-runtime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room-runtime" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-bom" }
+google-firebase-auth = { module = "com.google.firebase:firebase-auth" }
 junit = { module = "junit:junit", version.ref = "junit" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin-android" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin-androidx-compose" }
