--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ core-ktx = "1.13.1"
 core-splashscreen = "1.0.1"
 datastore-preferences = "1.1.1"
 espresso-core = "3.5.1"
-firebase-bom = "33.0.0"
+firebase-bom = "33.1.0"
 junit = "4.13.2"
 koin-android = "3.4.3"
 koin-androidx-compose = "3.4.3"
@@ -18,7 +18,7 @@ kotlinx-coroutines-core = "1.7.3"
 kotlinx-serialization-json = "1.6.0"
 ksp = "1.9.22-1.0.17"
 kps = "1.9.22"
-lifecycle-runtime-ktx = "2.8.0"
+lifecycle-runtime-ktx = "2.8.1"
 compose-bom = "2024.05.00"
 material = "1.6.7"
 material3 = "1.2.1"
@@ -29,8 +29,9 @@ navigation-ui-ktx = "2.7.7"
 retrofit = "2.9.0"
 retrofit2-kotlinx-serialization-converter = "1.0.0"
 room-runtime = "2.6.1"
-google-gms-google-services = "4.4.1"
+google-gms-google-services = "4.4.2"
 firebase-auth = "23.0.0"
+firebase-firestore-ktx = "25.0.0"
 
 
 [libraries]
@@ -76,6 +77,7 @@ mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit2-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofit2-kotlinx-serialization-converter" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebase-auth" }
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebase-firestore-ktx" }
 
 
 [plugins]
