--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,31 +2,31 @@
 activity-compose = "1.9.0"
 agp = "8.4.2"
 androidx-junit = "1.2.1"
-coil = "2.5.0"
+coil = "2.6.0"
 core-ktx = "1.13.1"
 core-splashscreen = "1.0.1"
 datastore-preferences = "1.1.1"
 espresso-core = "3.6.1"
 firebase-bom = "33.1.1"
 junit = "4.13.2"
-koin-android = "3.4.3"
-koin-androidx-compose = "3.4.3"
-koin-core = "3.4.3"
-kotlin = "1.9.22"
-kotlinx-coroutines-android = "1.7.3"
-kotlinx-coroutines-core = "1.7.3"
-kotlinx-serialization-json = "1.6.0"
-ksp = "1.9.22-1.0.17"
-kps = "1.9.22"
+koin-android = "3.5.6"
+koin-androidx-compose = "3.5.6"
+koin-core = "3.5.6"
+kotlin = "2.0.0"
+kotlinx-coroutines-android = "1.8.1"
+kotlinx-coroutines-core = "1.8.1"
+kotlinx-serialization-json = "1.7.1"
+ksp = "2.0.0-1.0.22"
+kps = "2.0.0"
 lifecycle-runtime-ktx = "2.8.2"
 compose-bom = "2024.06.00"
 material = "1.6.8"
 material3 = "1.2.1"
 media3-exoplayer = "1.3.1"
-mockito-core = "5.11.0"
+mockito-core = "5.12.0"
 mockito-kotlin = "5.3.1"
 navigation-ui-ktx = "2.7.7"
-retrofit = "2.9.0"
+retrofit = "2.11.0"
 retrofit2-kotlinx-serialization-converter = "1.0.0"
 room-runtime = "2.6.1"
 google-gms-google-services = "4.4.2"
@@ -93,3 +93,4 @@ google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kps" }
 google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "google-gms-google-services" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
